// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLinks/> parentElement should Match snapshot 1`] = `
.c0 {
  color: #FFFFFF;
  display: flex;
  flex-flow: row wrap;
}

.c1 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c1::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c1:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {
  .c0 {
    flex-flow: column wrap;
    align-content: center;
  }
}

<nav
  class="c0"
>
  <a
    class="c1"
    href="#target1"
    target="_self"
  >
    Link 1
  </a>
  <a
    class="c1"
    href="#target2"
    target="_self"
  >
    Link 2
  </a>
  <a
    class="c1"
    href="#target3"
    target="_self"
  >
    Link 3
  </a>
  <a
    class="c1"
    href="#target4"
    target="_self"
  >
    Link 4
  </a>
  <a
    class="c1"
    href="#target5"
    target="_self"
  >
    Link 5
  </a>
  <a
    class="c1"
    href="#target6"
    target="_self"
  >
    Link 6
  </a>
  <a
    class="c1"
    href="#target7"
    target="_self"
  >
    Link 7
  </a>
  <a
    class="c1"
    href="#target8"
    target="_self"
  >
    Link 8
  </a>
  <a
    class="c1"
    href="#target9"
    target="_self"
  >
    Link 9
  </a>
  <a
    class="c1"
    href="#target10"
    target="_self"
  >
    Link 10
  </a>
</nav>
`;

exports[`<NavLinks/> should Match snapshot 1`] = `
[
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target1"
    target="_self"
  >
    Link 1
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target2"
    target="_self"
  >
    Link 2
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target3"
    target="_self"
  >
    Link 3
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target4"
    target="_self"
  >
    Link 4
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target5"
    target="_self"
  >
    Link 5
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target6"
    target="_self"
  >
    Link 6
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target7"
    target="_self"
  >
    Link 7
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target8"
    target="_self"
  >
    Link 8
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target9"
    target="_self"
  >
    Link 9
  </a>,
  .c0 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c0::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c0:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {

}

<a
    class="c0"
    href="#target10"
    target="_self"
  >
    Link 10
  </a>,
]
`;
